# botfm

./: .env.example  .gitignore  Cargo.toml  README.md  config.template.toml  migrations.sql  package.json  rust-toolchain  rust-toolchain.toml  turbo.json
.moon/: toolchain.yml  workspace.yml
apps/api/: README.md  package.json  tsconfig.json
apps/api/public/: style.css
apps/api/src/: index.ts  server.ts
apps/api/src/routes/: lastfm_callback.tsx
apps/botfm/: biome.json  commands.json  package.json  seyfert.config.mjs  tsconfig.json
apps/botfm/src/: index.d.ts  index.ts
apps/botfm/src/app/commands/: ping.ts
apps/botfm/src/app/commands/artist/: artistplays.command.ts
apps/botfm/src/app/commands/config/: parent.ts  style.command.ts
apps/botfm/src/app/commands/lastfm/: fm.command.ts  fm.views.ts  login.command.ts  lyrics.command.ts  trackplays.command.ts  trackplays.views.ts
apps/botfm/src/app/events/: botReady.ts
apps/botfm/src/app/shared/: lastfm.command.ts
apps/botfm/src/core/: context.ts  errors.ts
apps/botfm/src/core/structures/: command.ts  paginator.ts
crates/common/: Cargo.toml
crates/common/src/config/: config.rs  mod.rs
crates/common/src/utils/: font.rs  image.rs  mod.rs
crates/database/: Cargo.toml  README.md
crates/database/src/: cache.rs  lib.rs  server_cache.rs
crates/database/src/model/: colors.rs  command_usage.rs  lastfm.rs  mod.rs  prefix.rs
crates/lastfm/: Cargo.toml
crates/lastfm/src/: lastfm.rs  lib.rs
services/api/: Cargo.toml
services/api/src/: lib.rs  main.rs
services/api/static/: auth.html  auth_error.html  style.css
services/bot/: Cargo.toml  moon.yml
services/bot/src/: main.rs
services/bot/src/commands/: mod.rs  register.rs
services/bot/src/commands/lastfm/: login.rs  mod.rs  now_playing.rs  track_plays.rs
services/bot/src/commands/system/: mod.rs  system_info.rs
services/bot/src/core/: data.rs  framework.rs  hooks.rs  mod.rs  structs.rs
services/bot/src/core/utils/: image.rs
services/bot/src/events/: mod.rs
services/bot/src/events/handlers/: ready.rs
services/bot/src/images/lastfm/: mod.rs  now_playing_card.rs
