[workspace]
members = ["services/api", "services/bot", "crates/common", "crates/database", "crates/lastfm"]
default-members = ["services/api", "services/bot"]
resolver = "2"

[workspace.dependencies]
database = { path = "crates/database" }
lastfm = { path = "crates/lastfm" }
common = { path = "crates/common" }

anyhow = "1.0.75"
rayon = "1.10.0"
image = { version = "0.25.5", features = ["png"]}
serde = { version = "1.0.123", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"

[workspace.lints.clippy]
uninlined_format_args = "warn"
redundant_clone = "warn"
too_long_first_doc_paragraph = "allow"


[patch.crates-io]
serenity = { git = "https://github.com/jamesbt365/serenity.git", branch = "components-v2" }
