[package]
name = "database"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-moka = "0.10.3"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }

anyhow = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
