[package]
name = "lastfm"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
common = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
md5 = "0.7.0"
serde_json = "1.0.138"
chrono = "0.4.39"

[lints]
workspace = true
