[package]
name = "lastfm"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
common = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

md5 = "0.7.0"
serde_json = "1.0.140"

[lints]
workspace = true
