[package]
name = "botfm"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { workspace = true, default-features = false, features = ["gateway", "model", "cache", "collector", "rustls_backend"] }
lumi = { workspace = true }

lastfm = { workspace = true }
common = { workspace = true }
database = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

sysinfo = "0.35.0"
humanize-bytes = "1.0.6"
image = { workspace = true }
imageproc = "0.25.0"
ab_glyph = "0.2.29"
tracing = "0.1.41"
