[package]
name = "botfm"
version = "0.1.0"
edition = "2021"

[dependencies]
# serenity = { workspace = true, default-features = false, features = ["gateway", "model", "cache", "collector", "rustls_backend"] }
lumi = { workspace = true }

lastfm = { workspace = true }
common = { workspace = true }
database = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

atomic-time = "0.1.5"
sysinfo = "0.35.2"
humanize-bytes = "1.0.6"
